fix: debug routes, handlers, add parsecase separated from tradecase
