# docs/swagger.json
@@ -13,7 +13,7 @@
     "paths": {
         "/contract/pairs": {
             "get": {
-                "description": "Get list of pairs",
+                "description": "Get full list of pairs",
                 "consumes": [
                     "application/json"
                 ],
@@ -23,19 +23,8 @@
                 "tags": [
                     "Contract"
                 ],
-                "summary": "Get Pairs",
-                "operationId": "getPairs",
-                "parameters": [
-                    {
-                        "description": "Get pairs",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/RequestPairs"
-                        }
-                    }
-                ],
+                "summary": "List Pairs",
+                "operationId": "listPairs",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -97,9 +86,9 @@
                 }
             }
         },
-        "/contract/pairs/list": {
-            "get": {
-                "description": "Get full list of pairs",
+        "/contract/pairs/find": {
+            "post": {
+                "description": "Get list of pairs by protocol, tokens",
                 "consumes": [
                     "application/json"
                 ],
@@ -109,8 +98,19 @@
                 "tags": [
                     "Contract"
                 ],
-                "summary": "List Pairs",
-                "operationId": "listPairs",
+                "summary": "Get Pairs",
+                "operationId": "getPairs",
+                "parameters": [
+                    {
+                        "description": "Get pairs",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/RequestPairs"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -328,12 +328,6 @@
                             "$ref": "#/definitions/ErrorResponse"
                         }
                     },
-                    "409": {
-                        "description": "Conflict",
-                        "schema": {
-                            "$ref": "#/definitions/ErrorResponse"
-                        }
-                    },
                     "507": {
                         "description": "Insufficient Storage",
                         "schema": {
@@ -394,8 +388,8 @@
                             "$ref": "#/definitions/TokenList"
                         }
                     },
-                    "507": {
-                        "description": "Insufficient Storage",
+                    "409": {
+                        "description": "Conflict",
                         "schema": {
                             "$ref": "#/definitions/ErrorResponse"
                         }
